sync: 同步上游更新
- 修复 api.d.ts.vm 代码生成模板 bug
-修复刷新时跳转至登录页问题
- 修复登录过期不弹窗问题
- 修复菜单结构变动后路由无法进入问题
- 优化搜索框 FormItem
- 调整搜索表单布局
- 修复字典数据重复获取问题
- 修复代码生成逻辑判断问题
-修复部门字典重复获取问题- 修复未清空文件列表上传回显问题
- 修复 i18n-ally 不工作问题
- 修复角色列表操作栏展示不全问题
-修复用户导入结果信息未渲染标签问题
- 修复角色用户分配未调用接口问题
-修复登录页平板界面滚动问题- 修复 isNull 和 isNotNull 判断方法潜在问题
- 新增数组相等性比较函数- 优化 oss 配置页面数据获取逻辑
- 统一操作成功提示信息

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,9 @@
   "i18n-ally.editor.preferEditor": true,
   "i18n-ally.keystyle": "nested",
   "i18n-ally.localesPaths": ["src/locales/langs"],
+  "i18n-ally.parsers.typescript.compilerOptions": {
+    "moduleResolution": "node"
+  },
   "prettier.enable": false,
   "typescript.tsdk": "node_modules/typescript/lib",
   "unocss.root": ["./"],
